# tiny-compiler

./: README.md  tiny-compiler.cabal
lib/: print_char.s  print_int.s  read_char.s  read_int.s
src/: Main.hs
src/Language/Tiny/: PrettyPrint.hs
src/Language/Tiny/Analysis/: ConstantFolding.hs  DeadCodeElimination.hs  Grammar.hs  Lexical.x  Syntactic.y  Token.hs
src/Language/Tiny/Synthesis/: Intermediate.hs  ValueNumbering.hs  X86.hs
